# i-pi

./: .buildinfo  .gitignore  .python-version  CNAME  CONTRIBUTING.md  CPC-README  Makefile  Makefile.style  README.md  README.rst  TODO  bibliography.html  contributing.html  distributed.html  env.sh  faq.html  features.html  genindex.html  getting-started.html  index.html  input-files.html  input-tags.html  introduction.html  objects.inv  onlinereso.html  output-files.html  output-tags.html  pyproject.toml  python.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  troubleshooting.html  tutorials.html  units.html
.circleci/: config.yml
.github/workflows/: all_pytest.yml  documentation.yml  examples.yml  lint.yml  mpi.yml  pip_pytest.yml  pytest.yml  pytest37.yml  pythonapp.yml  regression_tests.yml  release-pypi.yml  torch_cpu.yml  unit_and_regtest.yml  unit_tests.yml
JSONtest/instanton_doublewell1D/: RESTART  extras.json  init7.xyz  input.xml  line  simulation.instanton.hess_0  simulation.instanton.hess_1  simulation.instanton.hess_2  simulation.instanton.hess_3  simulation.instanton.hess_4  simulation.instanton.hess_5  simulation.instanton.hess_6  simulation.instanton_0.ener  simulation.instanton_0.xyz  simulation.instanton_1.ener  simulation.instanton_1.xyz  simulation.instanton_2.ener  simulation.instanton_2.xyz  simulation.instanton_3.ener  simulation.instanton_3.xyz  simulation.instanton_4.ener  simulation.instanton_4.xyz  simulation.instanton_5.ener  simulation.instanton_5.xyz  simulation.instanton_6.ener  simulation.instanton_6.xyz  simulation.instanton_FINAL_forces_7.xyz  simulation.instanton_forces_0.xyz  simulation.instanton_forces_1.xyz  simulation.instanton_forces_2.xyz  simulation.instanton_forces_3.xyz  simulation.instanton_forces_4.xyz  simulation.instanton_forces_5.xyz  simulation.instanton_forces_6.xyz
JSONtest/zundel/: extras.json  init.xyz  input.xml  input_short.xml
_sources/: contributing.rst.txt  distributed.rst.txt  faq.rst.txt  getting-started.rst.txt  input-files.rst.txt  input-tags.rst.txt  introduction.rst.txt  onlinereso.rst.txt  output-tags.rst.txt  python.rst.txt  troubleshooting.rst.txt  units.rst.txt
_static/: agogo.css  custom_styles.css  documentation_options.js
demos/: README.md
demos/2D-IR-Raman/: README.md  clean.sh  data.lmp  dip_pol_neq_2d.converged  noneqm-response.py  noneqm-traj.py  run.sh  spectrum.ipynb
demos/al6xxx-kmc/: README.md  input.xml
demos/alchemical-isotope-exchanges/: README.md  input.xml  water_32_data.lmp
demos/ensemble-deltamu/: README.md  data.ice-eq  in-1.lmp  in-2.lmp  in-3.lmp  in-4.lmp  init.xyz  init_ase.xyz  input.xml  input_n2p2.xml  input_rascaline.xml  install_dependencies.sh  install_n2p2.sh  install_rascaline.sh  install_rascaline_model.sh  requirements.txt  run_lammps.sh  run_n2p2.sh  run_n2p2_conda.sh  run_rascaline.sh  template.xyz
demos/noneqm-spectra/: dip_pol_neq_2d.converged  in.lmp  input.xml  input_spec.xml  noneqm-response.py  noneqm-traj.py  run.sh  spectrum.ipynb
demos/te-pigs/: README.md
doc/: Makefile  create_man.py  elsarticle-num-names.bst  etoolbox.sty  help.py  help_list.py  manual.tex  morebib.bib  mybib.bib  requirements.txt  test_rst.py
docs/: README  README.md  make.bat  requirements.txt
drivers/: LJ.f90  Makefile  README  README.md  driver.f90  driver.py  sockets.c
examples/: README.md
ipi/: README  __init__.py
ipi_tests/: README  README.md  __init__.py  pdb_generator.py  test_tools.py  xyz_generator.py
licenses/: LICENSE.md
patches/: README  cp2k-2.1.0_ipi.patch  cp2k-2.2.0_ipi.patch  cp2k-2.3.0_ipi.patch  espresso-4.1.3_ipi.patch  espresso-4.2_ipi.patch  espresso-4.3_ipi.patch  espresso-5.0_ipi.patch  lammps-26Aug13_ipi.patch
tests/: README  test_docs.py
(+3528 files in other folders)
