[metadata]
name = ipi
version = 3.1.12
description = A Python interface for ab initio path integral molecular dynamics simulations
long_description = file: README.md
long_description_content_type = text/x-rst
author = The i-PI developers
author_email = ipi.managers@gmail.com
url = http://ipi-code.org
project_urls =
    Documentation = https://ipi-code.org/i-pi
    Repository = https://github.com/i-pi/i-pi
license_files =
    licenses/license_GPL.txt
    licenses/license_MIT.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.8
install_requires =
    numpy<3

[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-cov
    mock
    ase
docs =
    sphinx>=3.2
    jinja2
    sphinxcontrib-bibtex==2.1.4
    furo
dev =
    %(test)s
    %(docs)s
    black==24.8.0
    flake8>=3.8.4
    tox>=4.0
